correction for text overlap of image in first text div

--- a/server/public/assets/styles/stylesheet.css
+++ b/server/public/assets/styles/stylesheet.css
@@ -75,3 +75,7 @@ h1 {
 #smallsize {
   height: 200px;
 }
+
+#bigsize {
+  padding-bottom: 5%;
+}
